fixed issue with duplicate unknown; bot maps now on server

--- a/src/optix/sidebar/sidebar.component.html
+++ b/src/optix/sidebar/sidebar.component.html
@@ -15,14 +15,20 @@
 			<h2>Scoreboard</h2>
 		</div>
 	</a>
+	<a [routerLink]="['/maps']">
+		<div class="link">
+			<h2>Maps</h2>
+		</div>
+	</a>
+	<span class="divider"></span>
 	<a [routerLink]="['/botrecords']">
 		<div class="link">
 			<h2>Optix Bot Records</h2>
 		</div>
 	</a>
-	<a [routerLink]="['/maps']">
+	<a [routerLink]="['/botmaps']">
 		<div class="link">
-			<h2>Maps</h2>
+			<h2>Optix Bot Maps</h2>
 		</div>
 	</a>
 	<div class="footer">
