fixed up sidebar resizing

--- a/src/optix/sidebar/sidebar.component.html
+++ b/src/optix/sidebar/sidebar.component.html
@@ -1,36 +1,38 @@
 <div class="main-panel">
-	<a [routerLink]="['/']">
-		<div class="logo-container">
-			<img src="../../assets/Optix.svg" alt="Optix" class="logo" />
-		</div>
-	</a>
-	<span class="divider"></span>
-	<a [routerLink]="['/worldrecords']">
-		<div class="link">
-			<h2>World Records</h2>
-		</div>
-	</a>
-	<a [routerLink]="['/scoreboard']">
-		<div class="link">
-			<h2>Scoreboard</h2>
-		</div>
-	</a>
-	<a [routerLink]="['/maps']">
-		<div class="link">
-			<h2>Maps</h2>
-		</div>
-	</a>
-	<span class="divider"></span>
-	<a [routerLink]="['/botrecords']">
-		<div class="link">
-			<h2>Optix Bot Records</h2>
-		</div>
-	</a>
-	<a [routerLink]="['/botmaps']">
-		<div class="link">
-			<h2>Optix Bot Maps</h2>
-		</div>
-	</a>
+	<div class="body">
+		<a [routerLink]="['/']">
+			<div class="logo-container">
+				<img src="../../assets/Optix.svg" alt="Optix" class="logo" />
+			</div>
+		</a>
+		<span class="divider"></span>
+		<a [routerLink]="['/worldrecords']">
+			<div class="link">
+				<h2>World Records</h2>
+			</div>
+		</a>
+		<a [routerLink]="['/scoreboard']">
+			<div class="link">
+				<h2>Scoreboard</h2>
+			</div>
+		</a>
+		<a [routerLink]="['/maps']">
+			<div class="link">
+				<h2>Maps</h2>
+			</div>
+		</a>
+		<span class="divider"></span>
+		<a [routerLink]="['/botrecords']">
+			<div class="link">
+				<h2>Optix Bot Records</h2>
+			</div>
+		</a>
+		<a [routerLink]="['/botmaps']">
+			<div class="link">
+				<h2>Optix Bot Maps</h2>
+			</div>
+		</a>
+	</div>
 	<div class="footer">
 		<span class="divider"></span>
 		<div class="icons">
