--- a/src/optix/sidebar/sidebar.component.html
+++ b/src/optix/sidebar/sidebar.component.html
@@ -34,6 +34,11 @@
 		</a>
 	</div>
 	<div class="footer">
+		<a [routerLink]="['/login']">
+			<div class="link">
+				<h2>Login</h2>
+			</div>
+		</a>
 		<span class="divider"></span>
 		<div class="icons">
 			<div class="filler">
