--- a/src/optix/sidebar/sidebar.component.sass
+++ b/src/optix/sidebar/sidebar.component.sass
@@ -45,7 +45,7 @@
 		background: -webkit-linear-gradient(left, white, #202020)
 		display: block
 		height: 2px
-		margin: 2.5vh 0 1.5vh 0
+		margin: 1.5vh 0
 
 	.footer
 		width: 100%
