--- a/src/optix/pages/home/home.component.sass
+++ b/src/optix/pages/home/home.component.sass
@@ -1,9 +1,9 @@
 .content
-	font-size: 22px
+	font-size: 3vh
 	padding: 15px 60px 75px 60px
 
 	h2
-		font-size: 42px
+		font-size: 6vh
 		padding-bottom: 30px
 
 	.new-maps
