--- a/src/optix/sidebar/sidebar.component.html
+++ b/src/optix/sidebar/sidebar.component.html
@@ -34,9 +34,10 @@
 		</a>
 	</div>
 	<div class="footer">
+		<div class="spacer"></div>
 		<a [routerLink]="['/login']">
 			<div class="link">
-				<h2>Login</h2>
+				<h2>Login / Register</h2>
 			</div>
 		</a>
 		<span class="divider"></span>
