fixed formatting/sizing on home page

--- a/src/optix/pages/home/home.component.sass
+++ b/src/optix/pages/home/home.component.sass
@@ -1,9 +1,9 @@
 .content
 	font-size: 3vh
-	padding: 15px 60px 75px 60px
+	padding: 15px 2vw 75px 2vw
 
 	h2
-		font-size: 6vh
+		font-size: max(5vh, 2.5vw, 24px)
 		padding-bottom: 30px
 
 	.new-maps
@@ -11,12 +11,12 @@
 		text-align: center
 
 		h3
-			font-size: 32px
+			font-size: max(3.3vh, 1.6vw, 16px)
 			margin-bottom: 15px
 
 		.download-links
 			display: flex
-			font-size: 24
+			font-size: 24px
 			justify-content: center
 
 			.link
