touched up layout

--- a/src/optix/optix.component.html
+++ b/src/optix/optix.component.html
@@ -1,5 +1,5 @@
 <div class="master-container">
-	<optix-sidebar class="sidebar"></optix-sidebar>
+	<optix-sidebar></optix-sidebar>
 	<div class="content-wrapper">
 		<div class="content">
 			<router-outlet></router-outlet>
