--- a/src/optix/optix.component.sass
+++ b/src/optix/optix.component.sass
@@ -7,7 +7,9 @@
 	min-height: 100vh
 
 	.content-wrapper
+		height: 100dvh
 		min-width: 600px
+		overflow-y: scroll
 		width: 100%
 
 		.content
@@ -16,8 +18,3 @@
 		.disclaimer
 			float: right
 			font-size: 12px
-
-	.sidebar
-		min-width: 200px
-		width: 36vh
-		flex-shrink: 0
