--- a/src/optix/sidebar/sidebar.component.sass
+++ b/src/optix/sidebar/sidebar.component.sass
@@ -7,8 +7,6 @@
 	justify-content: space-between
 	min-width: 200px
 	overflow: auto
-	position: sticky
-	top: 0
 	width: 36vh
 
 	a
@@ -63,6 +61,10 @@
 		display: flex
 		justify-content: center
 		margin: 25px 0
+
+		.close-cross
+			position: absolute
+			right: 10%
 
 		.logo
 			width: 80%
