--- a/src/optix/sidebar/sidebar.component.sass
+++ b/src/optix/sidebar/sidebar.component.sass
@@ -7,7 +7,7 @@
 	justify-content: space-between
 	min-width: 200px
 	overflow: auto
-	width: 36vh
+	width: 18vw
 
 	a
 		text-decoration: none
@@ -34,7 +34,7 @@
 
 			h2
 				color: white
-				font-size: max(14px, 2.6vh)
+				font-size: max(14px, 1.3vw)
 				font-weight: normal
 				margin: 0
 				padding: 0 30px
