more mobile friendly

--- a/src/optix/components/record-table-page/record-table-page.component.html
+++ b/src/optix/components/record-table-page/record-table-page.component.html
@@ -1,6 +1,6 @@
 <div class="container">
 	<div class="row title-bar">
-		<h1 class="col-sm">{{tableName}}</h1>
+		<h1 class="col-lg">{{tableName}}</h1>
 		<div class="col-md">
 			<div class="input-group mb-3">
 				<input type="text" class="form-control" placeholder="Search by Map/Author" [(ngModel)]="searchString" (keyup.enter)="filterRecords()">
