--- a/src/optix/maps/maps.component.sass
+++ b/src/optix/maps/maps.component.sass
@@ -84,7 +84,13 @@
 					flex-shrink: 0
 					&:hover
 						cursor: pointer
+
+					.underline-on-hover:hover
 						text-decoration: underline
+
+				.download-text
+					display: inline
+					text-decoration: none
 
 				.map-button
 						margin: 0 10px
@@ -98,7 +104,6 @@
 
 				.no-download
 					color: #555555
-					text-decoration: none
 			
 			.no-links
 				color: #555555
