--- a/src/optix/bot-server/bot-maps/bot-maps.component.html
+++ b/src/optix/bot-server/bot-maps/bot-maps.component.html
@@ -1,6 +1,6 @@
 <div class="container">
 	<div class="row title-bar">
-		<h1 class="col-sm">
+		<h1 class="col-lg">
 			<div class="title">Bot Maps</div>
 		</h1>
 		<div class="col-md">
