--- a/src/optix/optix.component.html
+++ b/src/optix/optix.component.html
@@ -1,9 +1,10 @@
-<div class="master-container">
+<div class="master-container" [ngClass]="{'lock-scrolling': isSidebarVisible()}">
 	<optix-sidebar></optix-sidebar>
 	<div class="content-wrapper">
 		<div class="content">
 			<router-outlet></router-outlet>
 		 </div>
 		<div *ngIf="isHomeRoute()" class="disclaimer">By using this website, you acknowledge the CCP's crimes against humanity</div>
-	  </div>
+	</div>
+	<fa-icon [icon]="faBars" class="hamburger" (click)="toggleSidebar()"></fa-icon>
 </div>
