--- a/src/optix/optix.component.sass
+++ b/src/optix/optix.component.sass
@@ -4,7 +4,10 @@
 	display: flex
 	font-family: Arial, sans-serif
 	font-size: 20px
+	max-width: 100dvw
 	min-height: 100vh
+	&.lock-scrolling
+		overflow: clip
 
 	.content-wrapper
 		height: 100dvh
@@ -18,3 +21,16 @@
 		.disclaimer
 			float: right
 			font-size: 12px
+	
+	.hamburger
+		display: none
+
+@media (max-width:600px)
+	.master-container .hamburger
+		display: block
+		font-size: 30px
+		left: 15px
+		position: absolute
+		top: 5px
+		&:hover
+			cursor: pointer
