--- a/src/optix/scoreboard/scoreboard.component.html
+++ b/src/optix/scoreboard/scoreboard.component.html
@@ -1,6 +1,6 @@
 <div class="container">
 	<div class="row title-bar">
-		<h1 class="col-sm">Scoreboard</h1>
+		<h1 class="col-lg">Scoreboard</h1>
 	</div>
 	<div class="row">
 		<div class="col-lg-4">
