more mobile friendly

--- a/src/optix/optix.component.sass
+++ b/src/optix/optix.component.sass
@@ -26,11 +26,17 @@
 		display: none
 
 @media (max-width:600px)
-	.master-container .hamburger
-		display: block
-		font-size: 30px
-		left: 15px
-		position: absolute
-		top: 5px
-		&:hover
-			cursor: pointer
+	.master-container
+		
+		.content-wrapper
+			overflow-y: inherit
+			width: auto
+		
+		.hamburger
+			display: block
+			font-size: 30px
+			left: 15px
+			position: absolute
+			top: 5px
+			&:hover
+				cursor: pointer
