--- a/src/optix/maps/maps.component.sass
+++ b/src/optix/maps/maps.component.sass
@@ -84,11 +84,10 @@
 					flex-shrink: 0
 					&:hover
 						cursor: pointer
-
-					.underline-on-hover:hover
 						text-decoration: underline
 
 				.download-text
+					color: #0094ff
 					display: inline
 					text-decoration: none
 
