--- a/src/optix/bot-server/bot-maps/bot-maps.component.html
+++ b/src/optix/bot-server/bot-maps/bot-maps.component.html
@@ -23,8 +23,19 @@
 				</a>
 				<div class="map-list">
 					<div *ngFor="let nextMap of author.maps">
-						<div class="map-id">[{{nextMap[0]}}]</div>
-						{{nextMap[1]}}
+						<div class="map-row">
+							<div>
+								<div class="map-id">[{{nextMap[0]}}]</div>
+								<div class="link" (click)="copyMapScript(nextMap[0])">
+									<fa-icon class="map-button" [icon]="faCopy"></fa-icon>
+									<div class="link-text">{{nextMap[1]}}</div>
+								</div>
+							</div>
+							<div class="link" (click)="downloadFile(nextMap[0])">
+								<fa-icon class="map-button" [icon]="faDownload"></fa-icon>
+								<div class="link-text">Download</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
