--- a/src/optix/bot-server/bot-maps/bot-maps.component.sass
+++ b/src/optix/bot-server/bot-maps/bot-maps.component.sass
@@ -54,6 +54,27 @@
 			margin-left: 30px
 			padding-top: 2px
 
-			.map-id
-				display: inline-block
-				width: 50px
+			.map-row
+				display: flex
+				justify-content: space-between
+				width: 100%
+
+				.link
+					color: #0094ff
+					display: inline
+					text-decoration: none
+					font-size: 22px
+					font-weight: bold
+
+					.link-text
+						display: inline
+						&:hover
+							cursor: pointer
+							text-decoration: underline
+
+					.map-button
+						margin: 0 10px
+
+				.map-id
+					display: inline-block
+					width: 50px
