--- a/src/optix/maps/maps.component.html
+++ b/src/optix/maps/maps.component.html
@@ -35,7 +35,7 @@
 								</div>
 							</div>
 							<div class="link-group">
-								<a class="link">
+								<a class="link stat-link" [routerLink]="[map._id]">
 									<fa-icon class="map-button" [icon]="faChartSimple"></fa-icon>
 									<div class="link-text">Stats</div>
 								</a>
