--- a/src/optix/maps/maps.component.sass
+++ b/src/optix/maps/maps.component.sass
@@ -92,6 +92,9 @@
 					.link-text
 						display: inline
 						text-decoration: none
+					
+					.stat-link
+						margin-right: 15px
 
 				.map-button
 						margin: 0 10px
@@ -114,5 +117,9 @@
 				padding-left: 40px
 
 @media (max-width:800px)
-	.author-panel .map-section .map-list .map-links .link-group .link-text
-		display: none
+	.author-panel .map-section .map-list .map-links .link-group
+		.link-text
+			display: none
+
+		.stat-link
+			margin-right: 5px
