--- a/src/optix/bot-server/bot-maps/bot-maps.component.html
+++ b/src/optix/bot-server/bot-maps/bot-maps.component.html
@@ -31,9 +31,15 @@
 									<div class="link-text">{{nextMap[1]}}</div>
 								</div>
 							</div>
-							<div class="link download" (click)="downloadFile(nextMap[0])">
-								<fa-icon class="map-button" [icon]="faDownload"></fa-icon>
-								<div class="link-text">Download</div>
+							<div class="link-group">
+								<a class="link stat-link" [routerLink]="['/maps', getMapId(nextMap[0])]">
+									<fa-icon class="map-button" [icon]="faChartSimple"></fa-icon>
+									<div class="link-text sub-link">Stats</div>
+								</a>
+								<div class="link download" (click)="downloadFile(nextMap[0])">
+									<fa-icon class="map-button" [icon]="faDownload"></fa-icon>
+									<div class="link-text sub-link">Download</div>
+								</div>
 							</div>
 						</div>
 					</div>
