--- a/src/optix/components/record-table-page/record-table-page.component.sass
+++ b/src/optix/components/record-table-page/record-table-page.component.sass
@@ -46,6 +46,14 @@
 			.hide
 				display: none
 
+			.map-link
+				color: #0094ff
+				font-weight: bold
+				text-decoration: none
+				&:hover
+					cursor: pointer
+					text-decoration: underline
+
 			.no-link
 				color: #ffffff
 
