--- a/src/optix/components/record-table-page/record-table-page.component.html
+++ b/src/optix/components/record-table-page/record-table-page.component.html
@@ -29,7 +29,9 @@
 								{{authorRecord.author}}
 							</div>
 						</th>
-						<td [ngClass]="{'even-row': i % 2 === 0}">{{mapRecord.map}}</td>
+						<td [ngClass]="{'even-row': i % 2 === 0}">
+							<a class="map-link" [routerLink]="['/maps', getMapId(mapRecord)]">{{mapRecord.map}}</a>
+						</td>
 						<td class="center first-row shadow">{{mapRecord.records[0]?.player}}</td>
 						<td class="center first-row shadow">
 							<a *ngIf="mapRecord.records[0]" [attr.href]="getLink(mapRecord.records[0])" placement="top" [ngbTooltip]="getToolTip(mapRecord.records[0])"
