--- a/src/optix/map-pages/map-pages.component.html
+++ b/src/optix/map-pages/map-pages.component.html
@@ -1,1 +1,13 @@
-<p>map-pages works!</p>
+<div class="container">
+	<div class="row title-bar">
+		<h1 class="col-lg">{{mapName}}</h1>
+	</div>
+	<div class="row">
+		<div class="col-xl-6">
+			Im working on it :v
+		</div>
+		<div class="col-xl-6">
+
+		</div>
+	</div>
+</div>
