--- a/src/optix/content/components/map-record-table/map-record-table.component.sass
+++ b/src/optix/content/components/map-record-table/map-record-table.component.sass
@@ -8,12 +8,6 @@
 .header
 	background-color: #303030
 
-.heavy-shadow
-	text-shadow: 0 0 20px #000
-
-.no-link
-	color: #ffffff
-
 .no-verification
 	text-decoration: none
 
@@ -24,3 +18,10 @@
 .third-row
 	background-color: #cd7f3290
 	text-shadow: 0 0 10px #000
+
+.time
+	color: #0094ff
+	text-shadow: 0 0 10px #000
+
+.no-link
+	color: #ffffff
