everything works, just need to add more images

--- a/src/optix/content/components/map-record-table/map-record-table.component.html
+++ b/src/optix/content/components/map-record-table/map-record-table.component.html
@@ -1,9 +1,9 @@
 <table class="table table-dark">
 	<thead>
 		<tr>
-			<th scope="col" class="header">Rank</th>
+			<th scope="col" class="header rank-col">Rank</th>
 			<th scope="col" class="header">Racer</th>
-			<th scope="col" class="header">Time</th>
+			<th scope="col" class="header time-col">Time</th>
 		</tr>
 	</thead>
 	<tbody>
