--- a/src/optix/content/components/map-record-table/map-record-table.component.sass
+++ b/src/optix/content/components/map-record-table/map-record-table.component.sass
@@ -11,6 +11,9 @@
 .no-verification
 	text-decoration: none
 
+.rank-col
+	width: 20%
+
 .second-row
 	background-color: #c0c0c090
 	text-shadow: 0 0 10px #000
@@ -22,6 +25,9 @@
 .time
 	color: #0094ff
 	text-shadow: 0 0 10px #000
+
+.time-col
+	width: 25%
 
 .no-link
 	color: #ffffff
