--- a/src/optix/content/components/record-table-page/record-table-page.component.html
+++ b/src/optix/content/components/record-table-page/record-table-page.component.html
@@ -35,21 +35,24 @@
 						<td class="center first-row shadow">{{mapRecord.records[0]?.player}}</td>
 						<td class="center first-row shadow">
 							<a *ngIf="mapRecord.records[0]" [attr.href]="getLink(mapRecord.records[0])" placement="top" [ngbTooltip]="getToolTip(mapRecord.records[0])"
-								[ngClass]="{'no-link': !isValidLink(mapRecord.records[0].verification), 'no-verification': mapRecord.records[0].verification === ''}">
+								[ngClass]="{'no-link': !isValidLink(mapRecord.records[0].verification), 'no-verification': mapRecord.records[0].verification === ''}"
+								target="_blank">
 								{{mapRecord.records[0].time}}
 							</a>
 						</td>
 						<td class="center second-row shadow">{{mapRecord.records[1]?.player}}</td>
 						<td class="center second-row shadow">
 							<a *ngIf="mapRecord.records[1]" [attr.href]="getLink(mapRecord.records[1])" placement="top" [ngbTooltip]="getToolTip(mapRecord.records[1])"
-								[ngClass]="{'no-link': !isValidLink(mapRecord.records[1].verification), 'no-verification': mapRecord.records[1].verification === ''}">
+								[ngClass]="{'no-link': !isValidLink(mapRecord.records[1].verification), 'no-verification': mapRecord.records[1].verification === ''}"
+								target="_blank">
 								{{mapRecord.records[1].time}}
 							</a>
 						</td>
 						<td class="center third-row shadow">{{mapRecord.records[2]?.player}}</td>
 						<td class="center third-row shadow">
 							<a *ngIf="mapRecord.records[2]" [attr.href]="getLink(mapRecord.records[2])" placement="top" [ngbTooltip]="getToolTip(mapRecord.records[2])"
-								[ngClass]="{'no-link': !isValidLink(mapRecord.records[2].verification), 'no-verification': mapRecord.records[2].verification === ''}">
+								[ngClass]="{'no-link': !isValidLink(mapRecord.records[2].verification), 'no-verification': mapRecord.records[2].verification === ''}"
+								target="_blank">
 								{{mapRecord.records[2].time}}
 							</a>
 						</td>
