--- a/src/optix/content/components/record-table-page/record-table-page.component.html
+++ b/src/optix/content/components/record-table-page/record-table-page.component.html
@@ -37,7 +37,7 @@
 							<a *ngIf="mapRecord.records[0]" [attr.href]="getLink(mapRecord.records[0])" placement="top" [ngbTooltip]="getToolTip(mapRecord.records[0])"
 								[ngClass]="{'no-link': !isValidLink(mapRecord.records[0].verification), 'no-verification': mapRecord.records[0].verification === ''}"
 								target="_blank">
-								{{mapRecord.records[0].time}}
+								{{mapRecord.records[0].time.toFixed(2)}}
 							</a>
 						</td>
 						<td class="center second-row shadow">{{mapRecord.records[1]?.player}}</td>
@@ -45,7 +45,7 @@
 							<a *ngIf="mapRecord.records[1]" [attr.href]="getLink(mapRecord.records[1])" placement="top" [ngbTooltip]="getToolTip(mapRecord.records[1])"
 								[ngClass]="{'no-link': !isValidLink(mapRecord.records[1].verification), 'no-verification': mapRecord.records[1].verification === ''}"
 								target="_blank">
-								{{mapRecord.records[1].time}}
+								{{mapRecord.records[1].time.toFixed(2)}}
 							</a>
 						</td>
 						<td class="center third-row shadow">{{mapRecord.records[2]?.player}}</td>
@@ -53,7 +53,7 @@
 							<a *ngIf="mapRecord.records[2]" [attr.href]="getLink(mapRecord.records[2])" placement="top" [ngbTooltip]="getToolTip(mapRecord.records[2])"
 								[ngClass]="{'no-link': !isValidLink(mapRecord.records[2].verification), 'no-verification': mapRecord.records[2].verification === ''}"
 								target="_blank">
-								{{mapRecord.records[2].time}}
+								{{mapRecord.records[2].time.toFixed(2)}}
 							</a>
 						</td>
 					</tr>
