--- a/src/optix/content/home/home.component.html
+++ b/src/optix/content/home/home.component.html
@@ -2,7 +2,7 @@
 	<img src="../../assets/Optix.svg" alt="Optix" class="logo" />
 </div>
 <div class="content">
-	<p>Welcome to Optix, the community for racing in Feng's Attack on Titan Tribute Game (AoTTG). Make use of the 3D Maneuver Gear from the Attack on Titan anime and race through various community created courses!</p>
+	<p>Welcome to Optix, the community for racing in Feng's Attack on Titan Tribute Game (AoTTG). Make use of the 3D Maneuver Gear from the Attack on Titan anime and race through various community created courses.</p>
 	<div class="row newest-records">
 		<div class="col-xl-6 video-wrapper">
 			<h2>Newest <span class="speed">Speed</span> Record</h2>
