--- a/src/optix/content/login-register/login-register.component.sass
+++ b/src/optix/content/login-register/login-register.component.sass
@@ -4,9 +4,6 @@
 	height: 100dvh
 	justify-content: center
 
-	h1
-		margin-bottom: 35px
-
 	.buttons
 		align-items: center
 		display: flex
@@ -27,3 +24,11 @@
 	.form-row
 		margin-bottom: 20px
 		width: 500px
+	
+	.title-wrapper
+		margin-bottom: 35px
+
+		.subtitle
+			color: #ccc
+			font-size: 16px
+			font-style: italic
