you can login and logout now. also fixed rendering for mobile

--- a/src/optix/content/login-register/login-register.component.sass
+++ b/src/optix/content/login-register/login-register.component.sass
@@ -16,19 +16,34 @@
 
 	.checkbox-row
 		padding-left: 20px
-	
-	.final-form-row
-		margin-bottom: 35px
-		width: 500px
+
+	.error-input
+		border-color: #f00
+
+	.form-control-errors
+		font-size: 18px
+		font-style: italic
+		height: 27px
+		margin-bottom: 20px
+
+		.error-text
+			color:  #ed4337
 
 	.form-row
-		margin-bottom: 20px
+		margin: 0 0 20px 0
 		width: 500px
 	
 	.title-wrapper
 		margin-bottom: 35px
+		margin-top: 30px
 
 		.subtitle
 			color: #ccc
 			font-size: 16px
 			font-style: italic
+
+@media (max-width:767px)
+	.login-register-wrapper
+
+		.form-row
+			width: 100%
