--- a/src/optix/content/sidebar/sidebar.component.html
+++ b/src/optix/content/sidebar/sidebar.component.html
@@ -36,11 +36,20 @@
 	</div>
 	<div class="footer">
 		<div class="spacer"></div>
-		<a [routerLink]="['/login']">
-			<div class="link">
-				<h2>Login / Register</h2>
-			</div>
-		</a>
+		<div *ngIf="isLoggedIn(); else logoutButton">
+			<a [routerLink]="['/login']" (click)="closeSidebar()">
+				<div class="link">
+					<h2>Login / Register</h2>
+				</div>
+			</a>
+		</div>
+		<ng-template #logoutButton>
+			<a (click)="closeSidebar()">
+				<div class="link" (click)="logout()">
+					<h2>Logout</h2>
+				</div>
+			</a>
+		</ng-template>
 		<span class="divider"></span>
 		<div class="icons">
 			<div class="filler">
