--- a/src/optix/content/login-register/login-register.component.html
+++ b/src/optix/content/login-register/login-register.component.html
@@ -13,62 +13,61 @@
 		</ng-template>
 		<ng-template #resetTitle>
 			<div class="title-wrapper">
-				<h1>Reset Password</h1>
+				<h1>Change Password</h1>
 				<p class="subtitle">DM Incendium for a Registration Token if you forgot your password</p>
 			</div>
 		</ng-template>
-		<form>
+		<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
 			<div class="row form-row">
-				<label class="col-sm-5">Username:</label>
-				<div class="col-sm-7">
-					<input class="form-control">
+				<label class="col-md-5">Username:</label>
+				<div class="col-md-7">
+					<input #usernameInput class="form-control" formControlName="username"
+						[ngClass]="{'error-input' : loginForm.controls['username'].errors && loginForm.controls['username'].touched}">
 				</div>
 			</div>
 			<div class="row form-row">
-				<label class="col-sm-5">{{isLoginPage() ? "Password:" : "New Password:"}}</label>
-				<div class="col-sm-7">
-					<input class="form-control" type="password">
+				<label class="col-md-5">{{isLoginPage() ? "Password:" : "New Password:"}}</label>
+				<div class="col-md-7">
+					<input class="form-control" type="password" formControlName="password"
+						[ngClass]="{'error-input' : loginForm.controls['password'].errors && loginForm.controls['password'].touched}">
 				</div>
 			</div>
-			<div *ngIf="isLoginPage(); else registerFields">
-				<div class="row form-row checkbox-row">
-					<div class="form-check">
-						<input class="form-check-input" type="checkbox" id="rememberMe">
-						<label class="form-check-label" for="rememberMe">Remember Me</label>
-					</div>
-				</div>
-			</div>
-			<ng-template #registerFields>
+			<div *ngIf="!isLoginPage()">
 				<div class="row form-row">
-					<label class="col-sm-5">Confirm Password:</label>
-					<div class="col-sm-7">
-						<input class="form-control" type="password">
+					<label class="col-md-5">Confirm Password:</label>
+					<div class="col-md-7">
+						<input class="form-control" type="password" formControlName="confirmPassword"
+							[ngClass]="{'error-input' : loginForm.errors && loginForm.controls['confirmPassword'].touched}">
 					</div>
 				</div>
-				<div class="row final-form-row">
-					<label class="col-sm-5">Registration Token:</label>
-					<div class="col-sm-7">
-						<input class="form-control">
+				<div class="row form-row">
+					<label class="col-md-5">Registration Token:</label>
+					<div class="col-md-7">
+						<input class="form-control" formControlName="registrationToken"
+							[ngClass]="{'error-input' : loginForm.controls['registrationToken'].errors && loginForm.controls['registrationToken'].touched}">
 					</div>
 				</div>
-			</ng-template>
+			</div>
+			<div class="form-control-errors">
+				<div class="error-text" *ngIf="!loginForm.valid">{{getFormError()}}</div>
+			</div>
 			<ng-container [ngTemplateOutlet]="isLoginPage() ? loginButtons : isRegisterPage() ? registerButtons : resetButtons"></ng-container>
 			<ng-template #loginButtons>
 				<div class="buttons">
-					<button type="button" class="btn btn-primary form-button">Login</button>
+					<button type="submit" [disabled]="!loginForm.valid || submitted" class="btn btn-primary form-button">Login</button>
 					<button [routerLink]="['/login/register']" type="button" class="btn btn-secondary form-button">No Account? Register!</button>
-					<button [routerLink]="['/login/reset']" type="button" class="btn btn-secondary form-button">Reset Password</button>
+					<button [routerLink]="['/login/reset']" type="button" class="btn btn-secondary form-button">Forgot Password</button>
 				</div>
 			</ng-template>
 			<ng-template #registerButtons>
 				<div class="buttons">
-					<button type="button" class="btn btn-primary form-button">Register</button>
+					<button type="submit" [disabled]="!loginForm.valid || submitted" class="btn btn-primary form-button">Register</button>
 					<button [routerLink]="['/login']" type="button" class="btn btn-secondary form-button">Already registered? Login!</button>
 				</div>
 			</ng-template>
 			<ng-template #resetButtons>
 				<div class="buttons">
-					<button type="button" class="btn btn-primary form-button">Reset & Login</button>
+					<button type="submit" [disabled]="!loginForm.valid || submitted" class="btn btn-primary form-button">Change Password</button>
 					<button [routerLink]="['/login']" type="button" class="btn btn-secondary form-button">Back</button>
 				</div>
 			</ng-template>
