--- a/src/optix/content/admin/admin.component.sass
+++ b/src/optix/content/admin/admin.component.sass
@@ -1,3 +1,6 @@
+.button
+	margin: 15px
+	
 .dropdown-wrapper
 	color: black
 	display: inline-block
@@ -9,3 +12,6 @@
 
 .role-dropdown
 	width: 100px
+
+.token-wrapper
+	height: 30px
